MRP-280 add additional string to package version.
Signed-off-by: Alexey Lyashkov <alexey_lyashkov@xyratex.com>
Reviewed-by: andrew_perepechko@xyratex.com
Reviewed-by: vitaly_fertman@xyratex.com

add additional string to ldiskfs package version as well.

Reviewed-by: Alexey Lyashkov <alexey_lyashkov@xyratex.com>
Reviewed-by: andrew_perepechko@xyratex.com

--- a/configure.ac
+++ b/configure.ac
@@ -20,4 +20,11 @@ AM_PROG_AS
 
 AC_CHECK_TOOLS(AR, ar)
 
+LB_DOWNSTREAM_RELEASE
+LB_DOWNSTREAM_VERSION
+
+if test x$DOWNSTREAM_VERSION != x""; then
+        VERSION="$VERSION.$DOWNSTREAM_VERSION"
+fi
+
 LB_CONFIGURE
