--- a/lustre/tests/Makefile.am
+++ b/lustre/tests/Makefile.am
@@ -62,7 +62,7 @@ noinst_PROGRAMS += statone runas openfile rmdirmany
 noinst_PROGRAMS += small_write multiop ll_sparseness_verify
 noinst_PROGRAMS += ll_sparseness_write mrename ll_dirstripe_verify mkdirmany
 noinst_PROGRAMS += openfilleddirunlink rename_many memhog
-noinst_PROGRAMS += mmap_sanity writemany reads flocks_test
+noinst_PROGRAMS += mmap_sanity writemany reads flocks_test flock_deadlock
 noinst_PROGRAMS += write_time_limit rwv copytool lgetxattr_size_check checkfiemap
 
 bin_PROGRAMS = mcreate munlink
