MRP-488 spec: add lustre-test dependencies
It is inconvenient to run tests to have them fail due to missing
tool packages.  Added attr, acl, e2fsprogs, perl and pdsh
to the "Requires:" tag for lustre-tests

Reviewed-by: Denis Kondratenko <Denis_Kondratenko@xyratex.com>

--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -54,9 +54,19 @@
 
 # for those uses that don't want the -smp/-bigsmp (or the .arch) on the end
 # of %kversion
-%define krequires %(bash -c "echo %{kversion} | sed -e 's/\.x86_64$//' -e 's/\.i[3456]86$//' -e 's/-smp$//' -e 's/-bigsmp$//' -e 's/-ppc64$//' -e 's/-default$//'")
+%define krequires %(bash -c "\
+  echo %{kversion} | \
+    sed -e 's/\.x86_64$//' \
+        -e 's/\.i[3456]86$//' \
+        -e 's/-smp$//' \
+        -e 's/-bigsmp$//' \
+        -e 's/-ppc64$//' \
+        -e 's/-default$//'")
 
-%define sles10 %(bash -c "if [ "%sles_version" = "10" ]; then echo -n '1'; else echo -n '0'; fi")
+%define sles10 %(bash -c "\
+  if [ "%sles_version" = "10" ] \
+  then echo -n 1 \
+  else echo -n 0; fi")
 
 %if %sles10
 %define flavor %(bash -c "echo %{kversion} | sed -e 's/^.*-//'")
@@ -220,6 +230,7 @@ Summary: Lustre testing framework
 Group: Development/Kernel
 Provides: %{name}-tests = %{version}
 Requires: %{name} = %{version}, %{name}-modules = %{version}, lustre-iokit
+Requires: attr, acl, e2fsprogs, perl, pdsh
 
 %description tests
 This package contains a set of test binaries and scripts that are intended
