--- a/.gitignore
+++ b/.gitignore
@@ -13,44 +13,59 @@
 #
 # Normal rules
 #
-*.[oasi]
-*.so
-*~
-*.swp
+.deps
+.depend
 .DS_Store
+.*.cmd
+.*.d
+.*.flags
+.tmp_versions
+.Xrefs
+*~
+*.a
+*.dSYM
+*.i
+*.ko
+*.mod.c
+*.o
+*.orig
+*.rej
+*.s
+*.so
+*.swp
+*.unsigned
+00[0-9][0-9]-*.patch
+autoMakefile
+autoMakefile.in
+config.log
+config.status
+configure
+Makefile
+modules.order
+TAGS
 
 #
 # Top level generated files specific to this top level dir
 #
-/.*.cmd
-/.depend
-/.deps
 /.mergeinfo-*
 /.pc
-/.tmp_versions
-/.Xrefs
 /.Xrefs-2.5
 /acl.size
 /aclocal.m4
 /autom4te-2.53.cache
 /autom4te.cache
-/autoMakefile
-/autoMakefile.in
+/COMMIT_EDITMSG.*
 /compile
 /config.cache
 /config.guess
 /config.h
 /config.h.in
-/config.log
-/config.status
 /config.sub
-/configure
 /depcomp
 /INSTALL
 /install-sh
 /lustre.spec
 /lustre*.tar.gz
-/Makefile
 /missing
 /mkinstalldirs
 /Module.markers
@@ -68,7 +83,6 @@
 #
 !.gitignore
 tags
-TAGS
 
 # cscope files
 cscope.*
