MRP-1137 UTILS: l_getidentity_nss
l_getidenity to fetch user's
supplementary groups info from NIS,
LDAP and/or any other services that
NSS modules exist for.

Change-Id: I224da011a75bd4f69889be5a7bba392ed90fa462
Signed-off-by: Alexander Zarochentsev <alexander_zarochentsev@xyratex.com>
Reviewed-on: http://morpheus.xyus.xyratex.com:8443/gerrit/654
Tested-by: Jenkins
Reviewed-by: Sergey Cheremencev <Sergey_Cheremencev@xyratex.com>
Reviewed-by: Vitaly Fertman <Vitaly_Fertman@xyratex.com>

--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -29,6 +29,9 @@ sbin_PROGRAMS = lctl wiretest l_getidentity llverfs llverdev \
 if SERVER
 sbin_PROGRAMS += mkfs.lustre tunefs.lustre
 endif
+if GETIDENTITY_NSS_BUILD
+sbin_PROGRAMS += l_getidentity_nss
+endif
 if LIBPTHREAD
 sbin_PROGRAMS += loadgen lhsmtool_posix
 endif
@@ -178,6 +181,13 @@ l_adsidentity_LDADD := $(LIBPTLCTL) $(LDAP)
 l_adsidentity_DEPENDENCIES := $(LIBPTLCTL)
 
 CONFDIR_DATA += configs/ads.conf
+endif
+
+if GETIDENTITY_NSS_BUILD
+l_getidentity_nss_SOURCES = l_getidentity_nss.c
+l_getidentity_nss_LDADD := $(LIBPTLCTL)
+l_getidentity_nss_LDFLAGS = -ldl
+l_getidentity_nss_DEPENDENCIES := $(LIBPTLCTL)
 endif
 
 ltrack_stats_SOURCES = ltrack_stats.c
