--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -116,6 +116,11 @@ Obsoletes: lustre-lite, lustre-lite-utils, lustre-ldap nfs-utils-lustre
 Provides: lustre-lite = %{version}, lustre-lite-utils = %{version}
 Requires: %{name}-modules = %{version}
 # GSS requires this: BuildRequires: pkgconfig, libgssapi-devel >= 0.10
+%if %{_vendor}=="redhat" || %{_vendor}=="fedora"
+#suse don't support selinux
+BuildRequires: libselinux-devel
+Requires: libselinux
+%endif
 
 %description
 Userspace tools and files for the Lustre file system.
