LU-2675 cleanup: remove obsolete llog-test crud
Do not create the llog-test.c symlink as this Linux 2.4-ism is no
longer needed. Also remove the now defunct llog-test.sh.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I72ba710659e168ead206a2b9b28633724d0e44c5
Reviewed-on: http://review.whamcloud.com/5239
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Jian Yu <jian.yu@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>

--- a/lustre/obdclass/autoMakefile.am
+++ b/lustre/obdclass/autoMakefile.am
@@ -52,5 +52,5 @@ endif # MODULES
 
 install-data-hook: $(install_data_hook)
 
-MOSTLYCLEANFILES := @MOSTLYCLEANFILES@  llog-test.c
+MOSTLYCLEANFILES := @MOSTLYCLEANFILES@
 MOSTLYCLEANFILES += linux/*.o darwin/*.o
