--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ LC_CONFIG_SRCDIR
 AC_CANONICAL_SYSTEM
 
 AM_INIT_AUTOMAKE([1.10 tar-ustar -Wno-portability])
-# AM_MAINTAINER_MODE
+AM_MAINTAINER_MODE([enable])
 
 AC_PROG_CC
 
