--- a/ldiskfs/configure.ac
+++ b/ldiskfs/configure.ac
@@ -9,6 +9,7 @@ AC_CONFIG_AUX_DIR([.])
 AC_CANONICAL_SYSTEM
 
 AM_INIT_AUTOMAKE([1.10 tar-ustar -Wno-portability])
+AM_MAINTAINER_MODE([enable])
 
 AC_PROG_CC
 
