--- a/libsysio/configure.in
+++ b/libsysio/configure.in
@@ -13,6 +13,7 @@ case "$host_os" in
 esac
 
 AM_INIT_AUTOMAKE([subdir-objects 1.9 tar-ustar])
+AM_MAINTAINER_MODE([enable])
 AC_PROG_CC
 AM_PROG_CC_C_O
 
