MRP-835 spec: update meta-information of lustre-devel rpm
In order to allow smooth transition from lustre-headers to
lustre-devel rpm, the latter should use 'Obsoletes: lustre-headers'
rpm spec tag.  This is required to prevent errors when upgrading from
older releases to newer ones, which don't have lustre-headers package,
but have lustre-devel instead.

More detailed information on rpm spec tags can be found here:

  http://fedoraproject.org/wiki/How_to_create_an_RPM_package

  > Obsoletes: remove another named package(s) when this package is
  > installed. Use when the package name changes or when it totally
  > replaces a different package.

Signed-off-by: Dmitriy Chumak <Dmitriy_Chumak@xyratex.com>
Change-Id: I9787c2de5ca10ae1534e790444b866564af49412
Reviewed-on: http://morpheus.xyus.xyratex.com:8443/gerrit/304
Reviewed-by: Bruce Korb <Bruce_Korb@xyratex.com>
Tested-by: Jenkins
Reviewed-by: Roman Grigoryev <Roman_Grigoryev@xyratex.com>
Tested-by: Kyrylo Shatskyy <kyrylo_shatskyy@xyratex.com>
Reviewed-by: Vitaly Fertman <Vitaly_Fertman@xyratex.com>

--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -187,6 +187,7 @@ systems.
 Summary: Lustre include headers
 Group: Development/Kernel
 Provides: %{name}-devel = %{version}
+Obsoletes: %{name}-headers
 Requires: %{name} = %{version}, %{name}-modules = %{version}
 
 %description devel
