LU-2136 tests: build posix test suite on i686 client
This patch improves prep() in lustre/tests/posix/posix.cfg
to support building posix test suite on i686 client.

Test-Parameters: envdefinitions=SLOW=yes \
clientdistro=el6 serverdistro=el6 clientarch=i686 \
serverarch=x86_64 testlist=posix

Signed-off-by: Jian Yu <jian.yu@intel.com>
Change-Id: I7b2fdc5552f0d2eb5cc7ef38b1192ec5a4fdefcf
Reviewed-on: http://review.whamcloud.com/5831
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Minh Diep <minh.diep@intel.com>
Reviewed-by: Wei Liu <wei3.liu@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>

--- a/lustre/tests/posix/posix.cfg
+++ b/lustre/tests/posix/posix.cfg
@@ -99,19 +99,20 @@ prep() {
     [[ -d $INSTALL_DIR ]] && rm -rf $INSTALL_DIR
 
     if grep -q " 6." /etc/issue; then
+        local arch=$(uname -m)
         [[ -d /usr/include/bits ]] || mkdir -p /usr/include/bits
         [[ -d /usr/include/sys ]] || mkdir -p /usr/include/sys
-        [[ -s /usr/include/stropts.h ]] || \
-            ln -s /usr/lib/x86_64-redhat-linux5E/include/stropts.h \
+        [[ -s /usr/include/stropts.h ]] ||
+            ln -s /usr/lib/$arch-redhat-linux5E/include/stropts.h \
             /usr/include/stropts.h
-        [[ -s /usr/include/bits/stropts.h ]] || \
-            ln -s /usr/lib/x86_64-redhat-linux5E/include/bits/stropts.h \
+        [[ -s /usr/include/bits/stropts.h ]] ||
+            ln -s /usr/lib/$arch-redhat-linux5E/include/bits/stropts.h \
             /usr/include/bits/stropts.h
-        [[ -s /usr/include/bits/xtitypes.h ]] || \
-            ln -s /usr/lib/x86_64-redhat-linux5E/include/bits/xtitypes.h \
+        [[ -s /usr/include/bits/xtitypes.h ]] ||
+            ln -s /usr/lib/$arch-redhat-linux5E/include/bits/xtitypes.h \
             /usr/include/bits/xtitypes.h
-        [[ -s /usr/include/sys/stropts.h ]] || \
-            ln -s /usr/lib/x86_64-redhat-linux5E/include/sys/stropts.h \
+        [[ -s /usr/include/sys/stropts.h ]] ||
+            ln -s /usr/lib/$arch-redhat-linux5E/include/sys/stropts.h \
             /usr/include/sys/stropts.h
     fi
 
