--- a/ldiskfs/configure.ac
+++ b/ldiskfs/configure.ac
@@ -80,8 +80,6 @@ AC_ARG_ENABLE([server],
 	])
 AC_MSG_RESULT([$enable_server])
 
-LB_CONFIG_HEADERS
-
 # These allow Lustre Makefiles and autoMakefiles to be used unchanged.
 AM_CONDITIONAL(MODULES, true)
 AM_CONDITIONAL(LINUX, true)
@@ -115,9 +113,12 @@ if test x$enable_server$enable_dist = xyesno ; then
 LB_LDISKFS_EXT_DIR
 LB_LDISKFS_EXT_SOURCE
 LB_LDISKFS_DEFINE_OPTIONS
+LB_EXT_FREE_BLOCKS_WITH_BUFFER_HEAD
 fi
 
 AM_CONDITIONAL(LDISKFS_PDO, test x$with_ldiskfs_pdo = xyes)
+
+LB_CONFIG_HEADERS
 
 AC_SUBST(ac_configure_args)
 
