LU-1617 build: ignore automatically generated files
Do not list automatically generated files in "git status" output,
so that it does not hide checkpatch.pl output in the commit message.

Signed-off-by: Andreas Dilger <andreas.dilger@intel.com>
Change-Id: Iab5c5be25de7dc54225fb2aa6540a4d75e500c1e
Reviewed-on: http://review.whamcloud.com/6229
Tested-by: Hudson
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: John Hammond <johnlockwoodhammond@gmail.com>
Reviewed-by: Keith Mannthey <keith.mannthey@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>

--- a/lustre/tests/.gitignore
+++ b/lustre/tests/.gitignore
@@ -1,75 +1,76 @@
+/*.log
+/*.xml
 /Makefile.in
-/openunlink
-/testreq
-/truncate
-/directio
-/openme
-/writeme
-/mcreate
-/munlink
-/mlink
-/tchmod
-/toexcl
-/fsx
-/test_brw
-/newfile
-/openclose
+/XMLCONFIG
+/checkstat
+/chownmany
+/cmknod
+/copy_attr
+/copytool
 /createdestroy
 /createmany
-/statmany
-/mkdirmany
-/lovstripe
-/*.xml
-/stat
-/setuid
-/multifstat
-/checkstat
-/wantedi
 /createtest
-/open_delay
-/statone
-/opendevunlink
-/opendirunlink
-/runas
-/openfile
-/unlinkmany
+/directio
 /fchdir_test
-/getdents
-/o_directory
-/utime
-/small_write
-/multiop
-/sleeptest
-/write_disjoint
-/write_append_truncate
-/ll_sparseness_verify
-/ll_sparseness_write
-/mrename
-/cmknod
-/iopentest1
-/iopentest2
-/XMLCONFIG
-/*.log
-/logs
-/ostactive
-/ll_dirstripe_verify
-/openfilleddirunlink
-/copy_attr
-/rename_many
-/memhog
-/mmap_sanity
-/rmdirmany
 /flock_test
 /flocks_test
-/writemany
-/reads
-/chownmany
+/fsx
+/getdents
+/iopentest1
+/iopentest2
+/it_test
+/lgetxattr_size_check
+/ll_dirstripe_verify
+/ll_getstripe_info
+/ll_sparseness_verify
+/ll_sparseness_write
 /llverdev
 /llverfs
-/ll_getstripe_info
-/it_test
-/write_time_limit
-/sendfile
+/logs
+/lovstripe
+/mcreate
+/memhog
+/mkdirmany
+/mlink
+/mmap_sanity
+/mrename
+/multifstat
+/multiop
+/munlink
+/newfile
+/o_directory
+/open_delay
+/openclose
+/opendevunlink
+/opendirunlink
+/openfile
+/openfilleddirunlink
+/openme
+/openunlink
+/ostactive
+/reads
+/rename_many
+/rmdirmany
+/runas
 /rwv
-/copytool
+/sendfile
+/setuid
+/sleeptest
+/small_write
+/stat
+/statmany
+/statone
+/tchmod
+/test_brw
+/testreq
+/toexcl
+/truncate
+/unlinkmany
+/utime
+/wantedi
+/write_append_truncate
+/write_disjoint
+/write_time_limit
+/writemany
+/writeme
 
