--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,15 @@
 00[0-9][0-9]-*.patch
 autoMakefile
 autoMakefile.in
+config.guess
 config.log
 config.status
+config.sub
 configure
+depcomp
+install-sh
 Makefile
+missing
 modules.order
 TAGS
 
