MRP-1075 script: alter ldiskfs prealloc table
This script allow to set prealloc_table values at run time
for particular PDRAID/MDRAID device.

Signed-off-by: rahul deshmukh <Rahul_Deshmukh@xyratex.com>
Change-Id: Idfbbc0bd567751adbb306ccc16eef0a9cdd07540
Reviewed-on: http://morpheus.xyus.xyratex.com:8443/gerrit/565
Tested-by: Jenkins
Reviewed-by: Alexander Zarochentsev <alexander_zarochentsev@xyratex.com>
Tested-by: Elena Gryaznova <Elena_Gryaznova@xyratex.com>
Reviewed-by: Vitaly Fertman <Vitaly_Fertman@xyratex.com>

--- a/lustre/scripts/Makefile.am
+++ b/lustre/scripts/Makefile.am
@@ -34,8 +34,8 @@
 # Lustre is a trademark of Sun Microsystems, Inc.
 #
 
-sbinscripts = lc_servip lustre_up14 lustre_rmmod lhbadm ldev
-
+sbinscripts = lc_servip lustre_up14 lustre_rmmod lhbadm ldev \
+    lustre_tune_prealloc
 # These are scripts that are generated from .in files
 genscripts = lustre_config lc_modprobe lc_net lc_hb lc_cluman lustre_createcsv \
     lc_md lc_lvm lustre_start
