--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -21,7 +21,7 @@ EXTRA_PROGRAMS = wirecheck
 
 # mount only finds helpers in /sbin
 rootsbin_PROGRAMS = mount.lustre
-sbin_PROGRAMS = lctl wiretest l_getidentity llverfs llverdev \
+sbin_PROGRAMS = lctl wiretest l_adsidentity l_getidentity llverfs llverdev \
 	llog_reader lr_reader lshowmount lustre_rsync \
 	ll_recover_lost_found_objs ltrack_stats ll_decode_filter_fid
 if SERVER
@@ -162,8 +162,12 @@ tunefs_lustre_LDFLAGS = -pthread -rdynamic -ldl
 endif
 
 l_getidentity_SOURCES = l_getidentity.c
-l_getidentity_LDADD := $(LIBPTLCTL)
+l_getidentity_LDADD := $(LIBPTLCTL) 
 l_getidentity_DEPENDENCIES := $(LIBPTLCTL)
+
+l_adsidentity_SOURCES = l_adsidentity.c
+l_adsidentity_LDADD := $(LIBPTLCTL) -lldap
+l_adsidentity_DEPENDENCIES := $(LIBPTLCTL)
 
 ltrack_stats_SOURCES = ltrack_stats.c
 endif # UTILS
