--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -368,6 +368,7 @@ cat >lustre.files <<EOF
 %attr(-, root, root) %{_includedir}/lustre
 %attr(-, root, root) %{_includedir}/libcfs
 %attr(-, root, root) %{_libexecdir}/lustre/lc_common
+%attr(-, root, root) %{_sysconfdir}/lustre/*
 %attr(-, root, root) %{_sysconfdir}/udev/rules.d/99-lustre.rules
 %attr(-, root, root) %{_sysconfdir}/init.d/lnet
 %attr(-, root, root) %{_sysconfdir}/init.d/lustre
