--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -23,7 +23,7 @@ EXTRA_PROGRAMS = wirecheck
 
 # mount only finds helpers in /sbin
 rootsbin_PROGRAMS = mount.lustre
-sbin_PROGRAMS = lctl wiretest l_adsidentity l_getidentity llverfs llverdev \
+sbin_PROGRAMS = lctl wiretest l_getidentity llverfs llverdev \
 	llog_reader lr_reader lshowmount lustre_rsync \
 	ll_recover_lost_found_objs ltrack_stats ll_decode_filter_fid
 if SERVER
@@ -31,6 +31,9 @@ sbin_PROGRAMS += mkfs.lustre tunefs.lustre
 endif
 if LIBPTHREAD
 sbin_PROGRAMS += loadgen lhsmtool_posix
+endif
+if LDAP_BUILD
+sbin_PROGRAMS += l_adsidentity
 endif
 bin_PROGRAMS = lfs req_layout
 bin_SCRIPTS = $(bin_scripts)
