LU-4070 build: RPM build errors
Move %{_bindir}/mcreate and %{_bindir}/munlink files under
condition %{with lustre_tests}.

Signed-off-by: Dmitry Eremin <dmitry.eremin@intel.com>
Change-Id: I888086f672f690d9e3518f16edbf090edc8d0f14
Reviewed-on: http://review.whamcloud.com/7860
Tested-by: Hudson
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Tested-by: Maloo <whamcloud.maloo@gmail.com>
Reviewed-by: Minh Diep <minh.diep@intel.com>
Reviewed-by: Bob Glossman <bob.glossman@intel.com>

--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -359,6 +359,8 @@ fi
 
 %if %{build_lustre_tests}
 echo '%attr(-, root, root) %{_libdir}/lustre/tests/*' >lustre-tests.files
+echo '%attr(-, root, root) %{_bindir}/mcreate' >>lustre-tests.files
+echo '%attr(-, root, root) %{_bindir}/munlink' >>lustre-tests.files
 echo '%attr(-, root, root) /lib/modules/%{kversion}/updates/kernel/fs/lustre/llog_test.*' >>lustre-tests.files
 modules_excludes="|llog_test"
 if [ -d $RPM_BUILD_ROOT%{_libdir}/lustre/liblustre/tests ] ; then
