LU-3570 libcfs: accelerate crc32c with pclmulqdq
Using hardware provided PCLMULQDQ instruction to accelerate
CRC32C check sum. This instruction is present starting with
Intel Westmere and AMD Bulldozer CPUs.

Also reorganize assembler code of other PCLMUL inmplementation
with using common assembler macros from inst.h.

Signed-off-by: James Simmons <uja.ornl@gmail.com>
Signed-off-by: Dmitry Eremin <dmitry.eremin@intel.com>
Change-Id: I2099ff8af3591b3e2267cb30486d7a4f0a3e90c0
Reviewed-on: http://review.whamcloud.com/6927
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Oleg Drokin <oleg.drokin@intel.com>

--- a/libcfs/libcfs/autoMakefile.am
+++ b/libcfs/libcfs/autoMakefile.am
@@ -50,7 +50,9 @@ libcfs_a_SOURCES= posix/posix-debug.c user-prim.c user-lock.c user-tcpip.c  \
 		  posix/posix-adler.c heap.c
 
 if HAVE_PCLMULQDQ
-libcfs_a_SOURCES += user-crc32pclmul.c crc32-pclmul_asm.S
+if NEED_PCLMULQDQ_CRC32
+libcfs_a_SOURCES += user-crc32pclmul.c linux/crc32-pclmul_asm.S
+endif
 endif
 
 libcfs_a_CPPFLAGS = $(LLCPPFLAGS)
