--- a/libcfs/libcfs/Makefile.in
+++ b/libcfs/libcfs/Makefile.in
@@ -5,23 +5,10 @@ libcfs-linux-objs += linux-prim.o linux-mem.o linux-cpu.o
 libcfs-linux-objs += linux-fs.o linux-sync.o linux-tcpip.o
 libcfs-linux-objs += linux-proc.o linux-curproc.o
 libcfs-linux-objs += linux-utils.o linux-module.o
-libcfs-linux-objs += linux-crypto.o linux-crypto-crc32.o
-libcfs-linux-objs += linux-crypto-adler.o
-
-libcfs-pclmul-obj :=
-
-ifeq ($(ARCH),x86)
-libcfs-linux-objs += linux-crypto-crc32pclmul.o
-libcfs-pclmul-obj += crc32-pclmul_asm.o
-endif
-ifeq ($(ARCH),i386)
-libcfs-linux-objs += linux-crypto-crc32pclmul.o
-libcfs-pclmul-obj += crc32-pclmul_asm.o
-endif
-ifeq ($(ARCH),x86_64)
-libcfs-linux-objs += linux-crypto-crc32pclmul.o
-libcfs-pclmul-obj += crc32-pclmul_asm.o
-endif
+libcfs-linux-objs += linux-crypto.o linux-crypto-adler.o
+@HAVE_CRC32_TRUE@libcfs-linux-objs += linux-crypto-crc32.o
+@HAVE_PCLMULQDQ_TRUE@@NEED_PCLMULQDQ_CRC32_TRUE@libcfs-linux-objs += linux-crypto-crc32pclmul.o crc32-pclmul_asm.o
+@HAVE_PCLMULQDQ_TRUE@@NEED_PCLMULQDQ_CRC32C_TRUE@libcfs-linux-objs += linux-crypto-crc32c-pclmul.o crc32c-pcl-intel-asm_64.o
 
 default: all
 
@@ -32,7 +19,7 @@ libcfs-all-objs := debug.o fail.o nidstrings.o module.o tracefile.o \
 		   prng.o workitem.o upcall_cache.o libcfs_cpu.o \
 		   libcfs_mem.o libcfs_lock.o heap.o
 
-libcfs-objs := $(libcfs-linux-objs) $(libcfs-all-objs) $(libcfs-pclmul-obj)
+libcfs-objs := $(libcfs-linux-objs) $(libcfs-all-objs)
 
 EXTRA_PRE_CFLAGS := -I@LUSTRE@/../libcfs/libcfs
 
