--- a/lustre/include/Makefile.am
+++ b/lustre/include/Makefile.am
@@ -73,6 +73,7 @@ EXTRA_DIST = \
 	lustre_mdc.h \
 	lustre_mds.h \
 	lustre_net.h \
+	lustre_nrs_tbf.h \
 	lustre_param.h \
 	lustre_quota.h \
 	lustre_req_layout.h \
