--- a/lustre/ost/Makefile.in
+++ b/lustre/ost/Makefile.in
@@ -1,5 +1,5 @@
 MODULES := ost
-ost-objs := ost_handler.o lproc_ost.o
+ost-objs := ost_handler.o
 
 EXTRA_DIST = $(ost-objs:%.o=%.c) ost_internal.h
 
