--- a/libcfs/libcfs/autoMakefile.am
+++ b/libcfs/libcfs/autoMakefile.am
@@ -47,7 +47,7 @@ libcfs_a_SOURCES= posix/posix-debug.c user-prim.c user-lock.c user-tcpip.c  \
 		  prng.c user-bitops.c user-mem.c hash.c kernel_user_comm.c \
 		  workitem.c fail.c libcfs_cpu.c libcfs_mem.c libcfs_lock.c \
 		  posix/rbtree.c user-crypto.c posix/posix-crc32.c          \
-		  posix/posix-adler.c heap.c
+		  posix/posix-adler.c posix/posix-proc.c heap.c
 
 if HAVE_PCLMULQDQ
 if NEED_PCLMULQDQ_CRC32
@@ -75,9 +75,9 @@ macos_PROGRAMS = libcfs
 
 nodist_libcfs_SOURCES = darwin/darwin-sync.c darwin/darwin-mem.c	\
 	darwin/darwin-prim.c darwin/darwin-fs.c darwin/darwin-curproc.c	\
-	darwin/darwin-tcpip.c darwin/darwin-utils.c 			\
-	darwin/darwin-debug.c darwin/darwin-proc.c 			\
-	darwin/darwin-tracefile.c darwin/darwin-module.c 		\
+	darwin/darwin-tcpip.c darwin/darwin-utils.c			\
+	darwin/darwin-debug.c darwin/darwin-proc.c			\
+	darwin/darwin-tracefile.c darwin/darwin-module.c		\
 	posix/posix-debug.c module.c tracefile.c nidstrings.c watchdog.c \
 	kernel_user_comm.c hash.c posix/rbtree.c heap.c
 
