LU-2675 lov: remove unused lov llog code
Remove the unused functions lov_llog_init(), lov_llog_finish(),
their supporting functions, and the file lov_log.c.

Signed-off-by: John L. Hammond <john.hammond@intel.com>
Change-Id: I1eaad74bbea5849cc8b28388112b6bd86b7a9781
Reviewed-on: http://review.whamcloud.com/8539
Tested-by: Jenkins
Tested-by: Maloo <hpdd-maloo@intel.com>
Reviewed-by: Andreas Dilger <andreas.dilger@intel.com>
Reviewed-by: Mike Pershin <mike.pershin@intel.com>

--- a/lustre/lov/autoMakefile.am
+++ b/lustre/lov/autoMakefile.am
@@ -38,7 +38,26 @@
 
 if LIBLUSTRE
 noinst_LIBRARIES = liblov.a
-liblov_a_SOURCES = lov_log.c lov_pool.c lov_obd.c lov_pack.c lov_request.c lov_offset.c lov_merge.c lov_ea.c lov_internal.h lov_cl_internal.h lov_dev.c lov_object.c lov_page.c lov_lock.c lov_io.c lovsub_dev.c lovsub_object.c lovsub_page.c lovsub_lock.c lovsub_io.c
+liblov_a_SOURCES = lov_cl_internal.h \
+        lov_internal.h \
+        lov_dev.c \
+        lov_ea.c \
+        lov_io.c \
+        lov_lock.c \
+        lov_merge.c \
+        lov_obd.c \
+        lov_object.c \
+        lov_offset.c \
+        lov_pack.c \
+        lov_page.c \
+        lov_pool.c \
+        lov_request.c \
+        lovsub_dev.c \
+        lovsub_io.c \
+        lovsub_lock.c \
+        lovsub_object.c \
+        lovsub_page.c
+
 liblov_a_CPPFLAGS = $(LLCPPFLAGS)
 liblov_a_CFLAGS = $(LLCFLAGS)
 endif
@@ -52,7 +71,6 @@ if DARWIN
 macos_PROGRAMS = lov
 
 lov_SOURCES =		\
-	lov_log.c	\
 	lov_pool.c	\
 	lov_obd.c	\
 	lov_pack.c	\
