--- a/lustre/lov/Makefile.in
+++ b/lustre/lov/Makefile.in
@@ -1,5 +1,22 @@
 MODULES := lov
-lov-objs := lov_log.o lov_obd.o lov_pack.o lproc_lov.o lov_offset.o lov_merge.o lov_request.o lov_ea.o lov_dev.o lov_object.o lov_page.o lov_lock.o lov_io.o lovsub_dev.o lovsub_object.o lovsub_page.o lovsub_lock.o lovsub_io.o lov_pool.o
+lov-objs := lov_dev.o \
+	lov_ea.o \
+	lov_io.o \
+	lov_lock.o \
+	lov_merge.o \
+	lov_obd.o \
+	lov_object.o \
+	lov_offset.o \
+	lov_pack.o \
+	lov_page.o \
+	lov_pool.o \
+	lov_request.o \
+	lovsub_dev.o \
+	lovsub_io.o \
+	lovsub_lock.o \
+	lovsub_object.o \
+	lovsub_page.o \
+	lproc_lov.o
 
 EXTRA_DIST = $(lov-objs:.o=.c) lov_internal.h lov_cl_internal.h
 
