--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -733,8 +733,8 @@ rm /var/run/%{name}-osd-zfs
 %endif # with lustre_modules
 
 %if %{with lustre_tests}
-%post tests
 %if %{defined rpm_post_base}
+%post tests
 if [ -x %{rpm_post_base}-tests.sh ]; then
 	%{rpm_post_base}-tests.sh %{cross_path} create
 fi
@@ -744,6 +744,8 @@ if [ -x %{rpm_post_base}-tests.sh ]; then
 	%{rpm_post_base}-tests.sh %{cross_path} remove
 fi
 %else
+%if %{with lustre_modules}
+%post tests
 if [ -f /boot/System.map-%{kversion} ]; then
 	depmod -ae -F /boot/System.map-%{kversion} %{kversion} || exit 0
 else
@@ -756,6 +758,7 @@ if [ -f /boot/System.map-%{kversion} ]; then
 else
 	depmod -ae %{kversion} || exit 0
 fi
+%endif
 %endif
 %endif
 
