--- a/lustre/utils/Makefile.am
+++ b/lustre/utils/Makefile.am
@@ -13,9 +13,11 @@ CONFDIR_DATA =
 MNTMODLDFLAGS := -rdynamic -ldl
 MNTMODCFLAGS := -DPLUGIN_DIR=\"${pkglibdir}\"
 
+LIBCFSUTIL := $(top_builddir)/libcfs/libcfs/libcfsutil.a
+
 LIBPTLCTL := $(top_builddir)/lnet/utils/libptlctl.a \
-	     $(top_builddir)/libcfs/libcfs/libcfsutil.a \
-	     $(top_builddir)/libcfs/libcfs/libcfs.a
+	     $(top_builddir)/libcfs/libcfs/libcfs.a \
+	     $(LIBCFSUTIL)
 
 sbin_scripts = lrun
 bin_scripts = llstat llobdstat plot-llstat llbackup
@@ -56,9 +58,9 @@ lctl_SOURCES = lustre_lfsck.c obd.c lustre_cfg.c lctl.c obdctl.h
 lctl_LDADD :=  liblustreapi.a $(LIBPTLCTL) $(PTHREAD_LIBS) $(LIBREADLINE)
 lctl_DEPENDENCIES := $(LIBPTLCTL) liblustreapi.a
 
-lfs_SOURCES = lfs.c obd.c lustre_cfg.c
-lfs_LDADD := liblustreapi.a $(LIBPTLCTL) $(PTHREAD_LIBS) $(LIBREADLINE)
-lfs_DEPENDENCIES := $(LIBPTLCTL) liblustreapi.a
+lfs_SOURCES = lfs.c
+lfs_LDADD := liblustreapi.a $(LIBCFSUTIL) $(LIBREADLINE)
+lfs_DEPENDENCIES := liblustreapi.a
 
 loadgen_SOURCES = loadgen.c lustre_cfg.c obd.c
 loadgen_LDADD := liblustreapi.a $(LIBPTLCTL) $(PTHREAD_LIBS) $(LIBREADLINE)
