--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -221,7 +221,7 @@ Summary: Lustre testing framework
 Group: Development/Kernel
 Provides: %{name}-tests = %{version}
 Requires: %{name} = %{version}, %{name}-modules = %{version}, lustre-iokit
-Requires: attr, acl, e2fsprogs, perl, pdsh
+Requires: attr, acl, e2fsprogs, perl, pdsh, rsync, lsof, /usr/bin/getconf
 
 %description tests
 This package contains a set of test binaries and scripts that are intended
