--- a/lnet/include/lnet/Makefile.am
+++ b/lnet/include/lnet/Makefile.am
@@ -3,6 +3,13 @@ lnetdir=$(includedir)/lnet
 SUBDIRS = linux
 DIST_SUBDIRS = linux
 
-EXTRA_DIST = api.h api-support.h \
-	lib-lnet.h lib-types.h lnet.h lnetctl.h types.h \
-	socklnd.h lnetst.h
+EXTRA_DIST = \
+	api.h \
+	lib-lnet.h \
+	lib-types.h \
+	lnet.h \
+	lnetctl.h \
+	lnetst.h \
+	nidstr.h \
+	socklnd.h \
+	types.h
