MRP-1759 build: add kmod for client
When the Lustre is built as client with driver update support,
kmod package has ability to check and copy modules for the new
added kernel. The package includes dependencies on a kernel symbols
version. In most cases this is enough for a minor security kernel
updates. New param build_kmod was added to spec file. For Lustre
client build_kmod is enabled by default, and disabled for servers.

This patch changes the Lustre modules location to
[extra|updates]/lustre-client/[fs|net]/ for client build.
Kmod utils/scripts requires this modification, cause they use %name
for postinstall scripts. Path to Lustre modules for server build
stay the same.

Signed-off-by: Alexander Boyko <alexander.boyko@seagate.com>
Change-Id: I303bd0d4367a48adee61b437f7053a93a2c55c5a
Reviewed-on: http://es-gerrit.xyus.xyratex.com:8080/4096
Tested-by: Jenkins
Reviewed-by: Alexey Lyashkov <alexey.lyashkov@seagate.com>
Tested-by: Alexander Lezhoev <alexander.lezhoev@seagate.com>
Reviewed-by: Vladimir Saveliev <vladimir.saveliev@seagate.com>
Reviewed-by: Vitaly Fertman <vitaly.fertman@seagate.com>

--- a/lustre.spec.in
+++ b/lustre.spec.in
@@ -7,12 +7,15 @@
 %bcond_without lustre_tests
 %bcond_without lustre_iokit
 %bcond_without lustre_modules
+%bcond_without build_kmod
 
 %if %{without servers}
     # --without servers overrides --with {ldiskfs|zfs}
     # so undefine the internal variables set by bcond_*
     %undefine with_ldiskfs
     %undefine with_zfs
+%else
+    %undefine with_build_kmod
 %endif
 
 %{!?version: %global version @VERSION@}
@@ -32,6 +35,7 @@
 
 # always append the buildid, even when the caller defines %release
 %define fullrelease %{myrelease}%{buildid}
+%{!?kernel_version: %global kernel_version %kversion}
 
 # in order to get kernel symset and/or kernel module dependencies into
 # the RPM, in order to support weak-modules, the internal dependency gen-
@@ -57,12 +61,7 @@
 # of %kversion
 %define krequires %(bash -c "\
   echo %{kversion} | \
-    sed -e 's/\.x86_64$//' \
-        -e 's/\.i[3456]86$//' \
-        -e 's/-smp$//' \
-        -e 's/-bigsmp$//' \
-        -e 's/-ppc64$//' \
-        -e 's/-default$//'")
+    sed -e 's/\.x86_64$//' -e 's/\.i[3456]86$//' -e 's/-smp$//' -e 's/-bigsmp$//' -e 's/-ppc64$//' -e 's/-default$//'")
 
 # Set the package name prefix
 %if %{undefined lustre_name}
@@ -83,6 +82,12 @@
             %global kmoddir extra
         %endif
     %endif
+%endif
+
+%if %{with build_kmod}
+	%global modules_fs_path %{kmoddir}/%{name}/fs
+%else
+	%global modules_fs_path %{kmoddir}/kernel/fs/%{name}
 %endif
 
 %if %{defined cross_path} && %{defined post_script}
@@ -108,7 +113,11 @@ URL: http://wiki.whamcloud.com/
 BuildRoot: %{_tmppath}/lustre-%{version}-root
 Obsoletes: lustre-lite, lustre-lite-utils, lustre-ldap nfs-utils-lustre
 Provides: lustre-lite = %{version}, lustre-lite-utils = %{version}
+%if %{with build_kmod}
+Requires: kmod-%{name} = %{version}
+%else
 Requires: %{name}-modules = %{version}
+%endif
 BuildRequires: libtool
 %if %{with servers}
 Requires: lustre-osd
@@ -117,6 +126,9 @@ Requires: lustre-osd
 Requires: %{cross_requires}
 AutoReqProv: no
 %endif
+%if %{_vendor}=="redhat"
+BuildRequires: redhat-rpm-config
+%endif
 
 %description
 Userspace tools and files for the Lustre file system.
@@ -124,6 +136,8 @@ Userspace tools and files for the Lustre file system.
 %if %{with lustre_modules}
 %package modules
 Summary: Kernel Lustre modules for Linux %{kversion}
+Group: Development/Kernel
+%if %{without build_kmod}
 %if %{defined cross_requires}
 Requires: %{cross_requires}
 AutoReqProv: no
@@ -135,7 +149,11 @@ AutoReqProv: no
 Requires: kernel = %{krequires}
 %endif
 %endif
-Group: Development/Kernel
+%else  #without build_kmod
+BuildRequires: %kernel_module_package_buildreqs
+# Build only for standard kernel variant(s)
+%kernel_module_package -f lustre-modules.files default
+%endif
 
 %description modules
 Lustre file system, server and network drivers for Linux %{kversion}.
@@ -220,7 +238,12 @@ systems.
 Summary: Lustre testing framework
 Group: Development/Kernel
 Provides: %{name}-tests = %{version}
-Requires: %{name} = %{version}, %{name}-modules = %{version}, lustre-iokit
+Requires: %{name} = %{version}, lustre-iokit
+%if %{without build_kmod}
+Requires: %{name}-modules = %{version}
+%else
+Requires: kmod-%{name} = %{version}
+%endif
 Requires: attr, acl, e2fsprogs, perl, pdsh, rsync, lsof, /usr/bin/getconf
 
 %description tests
@@ -275,6 +298,27 @@ ln lnet/ChangeLog ChangeLog-lnet
 
 # Set an explicit path to our Linux tree, if we can.
 cd $RPM_BUILD_DIR/lustre-%{version}
+
+:> lustre-modules.files
+echo '%defattr(-,root,root)' > lustre-modules.files
+echo '%{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/*' >> lustre-modules.files
+%if %{with lustre_tests}
+echo '%exclude %{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/llog_test.ko' >> lustre-modules.files
+%endif
+%if %{with ldiskfs}
+echo '%exclude %{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/ldiskfs.ko' >> lustre-modules.files
+echo '%exclude %{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/osd_ldiskfs.ko' >> lustre-modules.files
+%endif
+%if %{with zfs}
+echo '%exclude %{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/osd_zfs.ko' >> lustre-modules.files
+%endif
+%if %{defined rpm_post_base}
+echo '%attr(0555, root, root) %{rpm_post_base}-modules.sh' >> lustre-modules.files
+%endif
+echo '%doc COPYING' >> lustre-modules.files
+echo '%doc ChangeLog-lustre' >> lustre-modules.files
+echo '%doc ChangeLog-lnet' >> lustre-modules.files
+
 # override %optflags so that the vendor's overzealous flags don't create
 # build failures
 %define optflags -g -O2 -Werror
@@ -294,6 +338,12 @@ CONFIGURE_ARGS="$CONFIGURE_ARGS --enable-modules"
 CONFIGURE_ARGS="$CONFIGURE_ARGS --disable-modules"
 %endif
 
+%if %{without servers}
+CONFIGURE_ARGS="$CONFIGURE_ARGS --disable-server"
+%endif
+%if %{without ldiskfs}
+CONFIGURE_ARGS="$CONFIGURE_ARGS --disable-ldiskfs"
+%endif
 %if %{without zfs}
 CONFIGURE_ARGS="$CONFIGURE_ARGS --without-zfs"
 %endif
@@ -310,6 +360,12 @@ fi
 # it will be set --with-kmp-moddir=%%kmoddir
 CONFIGURE_ARGS=$(echo $CONFIGURE_ARGS | sed -e 's/"\?--with-kmp-moddir=[^ ][^ ]* \?//')
 
+%if %{with build_kmod}
+# kmod tools/scripts require %{name} directory with kernel modules
+# server is build with in kernel path to modules
+CONFIGURE_ARGS="$CONFIGURE_ARGS  --with-kmp-moddir=%{kmoddir}/%{name}"
+%endif
+
 # we need to eval "configure" because $CONFIGURE_ARGS could have a quoted
 # string in it which we don't want word splitted by the shell
 # also remove (build|host|target) options because they will be specified
@@ -318,7 +374,7 @@ CONFIGURE_ARGS=$(echo $CONFIGURE_ARGS | sed -e 's/"\?--with-kmp-moddir=[^ ][^ ]*
 
 %eval_configure \
 	%{?kdir: --with-linux=%kdir} %{?kobjdir: --with-linux-obj=%kobjdir} \
-	$CONFIGURE_ARGS --with-kmp-moddir=%{kmoddir}
+	$CONFIGURE_ARGS
 make %{?_smp_mflags} -s %{?make_args}
 
 %install
@@ -370,7 +426,7 @@ echo '%{_libdir}/lustre/tests/*' >>lustre-tests.files
 echo '%{_bindir}/mcreate' >>lustre-tests.files
 echo '%{_bindir}/munlink' >>lustre-tests.files
 %if %{with lustre_modules}
-echo '%{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/llog_test.ko' >>lustre-tests.files
+echo '%{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/llog_test.ko' >>lustre-tests.files
 %endif
 %endif
 
@@ -427,31 +483,15 @@ find $RPM_BUILD_ROOT%{?rootdir}/lib/modules/%{kversion}/%{kmoddir} -name "*.ko" 
 %config(noreplace) %{_sysconfdir}/ldev.conf
 
 %if %{with lustre_modules}
-%files modules
-%defattr(-,root,root)
-%{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/*
-%if %{with lustre_tests}
-%exclude %{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/llog_test.ko
+%if %{without build_kmod}
+%files modules -f lustre-modules.files
 %endif
-%if %{with ldiskfs}
-%exclude %{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/ldiskfs.ko
-%exclude %{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/osd_ldiskfs.ko
-%endif
-%if %{with zfs}
-%exclude %{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/osd_zfs.ko
-%endif
-%if %{defined rpm_post_base}
-%attr(0555, root, root) %{rpm_post_base}-modules.sh
-%endif
-%doc COPYING
-%doc ChangeLog-lustre
-%doc ChangeLog-lnet
 
 %if %{with ldiskfs}
 %files osd-ldiskfs
 %defattr(-,root,root)
-%{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/ldiskfs.ko
-%{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/osd_ldiskfs.ko
+%{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/ldiskfs.ko
+%{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/osd_ldiskfs.ko
 %{_libdir}/@PACKAGE@/mount_osd_ldiskfs.so
 %if %{defined rpm_post_base}
 %attr(0555, root, root) %{rpm_post_base}-osd-ldiskfs.sh
@@ -461,7 +501,7 @@ find $RPM_BUILD_ROOT%{?rootdir}/lib/modules/%{kversion}/%{kmoddir} -name "*.ko" 
 %if %{with zfs}
 %files osd-zfs
 %defattr(-,root,root)
-%{?rootdir}/lib/modules/%{kversion}/%{kmoddir}/kernel/fs/@PACKAGE@/osd_zfs.ko
+%{?rootdir}/lib/modules/%{kversion}/%{modules_fs_path}/osd_zfs.ko
 %{_libdir}/@PACKAGE@/mount_osd_zfs.so
 %if %{defined rpm_post_base}
 %attr(0555, root, root) %{rpm_post_base}-osd-zfs.sh
